@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/magit/magit-1.1.1.ebuild,v 1.1 2012/04/02 17:54:02 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emacs/magit/magit-1.1.1.ebuild,v 1.2 2012/11/26 11:31:15 ulm Exp $
 
 EAPI=4
 
@@ -10,7 +10,7 @@ DESCRIPTION="An Emacs mode for GIT"
 HOMEPAGE="http://magit.github.com/magit/"
 SRC_URI="http://github.com/downloads/magit/magit/${P}.tar.gz"
 
-LICENSE="GPL-3 FDL-1.2"
+LICENSE="GPL-3+ FDL-1.2+"
 SLOT="0"
 KEYWORDS="~amd64 ~x86"
 IUSE="contrib"
