@@ -1,8 +1,8 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/magit/magit-1.0.0.ebuild,v 1.3 2012/11/26 11:31:15 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emacs/magit/magit-1.2.0.ebuild,v 1.1 2012/11/26 11:31:15 ulm Exp $
 
-EAPI=4
+EAPI=5
 
 inherit elisp
 
@@ -13,17 +13,24 @@ SRC_URI="http://github.com/downloads/magit/magit/${P}.tar.gz"
 LICENSE="GPL-3+ FDL-1.2+"
 SLOT="0"
 KEYWORDS="~amd64 ~x86"
-IUSE=""
+IUSE="contrib"
 
-SITEFILE="50magit-gentoo.el"
+SITEFILE="50${PN}-gentoo.el"
 
 src_compile() {
-	default
+	emake core docs
+	use contrib && emake contrib
+	rm 50magit.el magit-pkg.el || die
 }
 
 src_install() {
-	elisp-install ${PN} magit{,-svn,-topgit,-key-mode}.{el,elc} || die
+	elisp-install ${PN} *.{el,elc} || die
 	elisp-site-file-install "${FILESDIR}/${SITEFILE}" || die
 	doinfo magit.info
 	dodoc README.md
+
+	if use contrib; then
+		elisp-install ${PN} contrib/*.{el,elc} || die
+		dobin contrib/magit
+	fi
 }
