@@ -1,6 +1,12 @@
 # ChangeLog for app-emacs/magit
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/magit/ChangeLog,v 1.7 2012/04/02 17:54:02 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emacs/magit/ChangeLog,v 1.8 2012/11/26 11:31:15 ulm Exp $
+
+*magit-1.2.0 (26 Nov 2012)
+
+  26 Nov 2012; Ulrich Müller <ulm@gentoo.org> magit-1.0.0.ebuild,
+  magit-1.1.1.ebuild, +magit-1.2.0.ebuild:
+  Version bump, bug 444776. Specify LICENSE more precisely.
 
 *magit-1.1.1 (02 Apr 2012)
 
